fixed main page title wrapping

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -115,12 +115,12 @@
   }
 
   .mainPageTitle{
-    grid-column: 1 / 2;
+    grid-column: 1 / 3;
   }
 
   .mainPageTitle{
     text-align: left;
-    margin: 2em;
+    
   }
 
   /*
